test/scc/stmt/semantic-errors/config.py
def run(test):
	presets.parse_errors(test)